--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -10,13 +10,13 @@
                     <img src="assets/img/zhipu.jpg" width="160" style="margin-right: 30px">
                 </a>
 		<a href="https://www.scitix.ai/">
-                    <img src="_sponsors/scitix.jpg" width="160" style="margin-right: 30px">
+                    <img src="assets/img/scitix.jpg" width="160" style="margin-right: 30px">
                 </a>
                 <a href="https://www.6estates.com/">
-                    <img src="_sponsors/6estates.jpg" width="270" style="margin-right: 20px">
+                    <img src="assets/img/6estates.jpg" width="270" style="margin-right: 20px">
                 </a>
                 <a href="https://modelbest.cn/">
-                <img src="_sponsors/modelbest.jpg" width="270" style="margin-right: 20px">
+                    <img src="assets/img/modelbest.jpg" width="270" style="margin-right: 20px">
                 </a>
             </span>
 		   
