--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,5 +1,5 @@
 
-<section id="sponsor" class={{ include.class }}>
+<section id="sponsors" class={{ include.class }}>
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center" style="padding-bottom: 20px;">
@@ -7,10 +7,10 @@
 
             <span>
                 <a href="https://www.zhipuai.cn/">
-                    <img src="assets/img/zhipu.jpg" width="160" style="margin-right: 30px">
+                    <img src="assets/img/zhipu.jpg" width="270" style="margin-right: 30px">
                 </a>
 		<a href="https://www.scitix.ai/">
-                    <img src="assets/img/scitix.jpg" width="160" style="margin-right: 30px">
+                    <img src="assets/img/scitix.jpg" width="270" style="margin-right: 30px">
                 </a>
                 <a href="https://www.6estates.com/">
                     <img src="assets/img/6estates.jpg" width="270" style="margin-right: 20px">
