--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -9,7 +9,7 @@
                 <a href="https://www.zhipuai.cn/">
                     <img src="assets/img/zhipu.jpg" width="200" style="margin-right: 30px; margin-bottom: 50px">
                 </a>
-		<a href="https://www.huawei.com/sg/">
+		<a href="https://www.huawei.com/en/">
                     <img src="assets/img/huawei.jpg" width="200" style="margin-right: 30px; margin-bottom: 50px">
                 </a>
 		<a href="https://www.scitix.ai/">
